@@ -1,0 +1,1 @@
+require 'cucumber/jvm_support/backtrace_filter'
