@@ -1,0 +1,7 @@
+import 'cuke4duke.internal.language.StepMother'
+
+module Cucumber
+  class StepMother
+    include Java.cuke4duke.internal.language.StepMother
+  end
+end
